# rembgclipboard

./: .gitignore  flake.nix  pyproject.toml
src/rembgclipboard/: app.py
