[project]
name = "rembgclipboard"
version = "0.1.0"
description = ""
authors = [
    {name = "Nick Friday",email = "nickjfriday@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rembg (>=2.0.68,<3.0.0)",
    "onnxruntime (>=1.23.2,<2.0.0)",
]

[tool.poetry]
packages = [{include = "rembgclipboard", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
