[tool.poetry]
name = "rembgclipboard"
version = "0.1.0"
description = ""
authors = ["Nick Friday <nickjfriday@gmail.com>"]
readme = "README.md"
packages = [{include = "rembgclipboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
rembg = "^2.0.68"
onnxruntime = "^1.23.2"

[tool.poetry.scripts]
rembgclipboard = "src.rembgclipboard.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"